nickname and email validation check
added nickname and email check, remade loginviewcontroller(switches from register user to login user and back)

--- a/MemorizeStudy/Base.lproj/Main.storyboard
+++ b/MemorizeStudy/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XJn-vt-g4E">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MmK-e4-B6c">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -19,10 +19,26 @@
                         <viewLayoutGuide key="safeArea" id="Bgm-bi-9mu"/>
                         <color key="backgroundColor" systemColor="systemBlueColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="jyl-be-Etz"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U4D-0m-q4h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="73" y="-344"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="c6z-QR-yJK">
+            <objects>
+                <navigationController id="MmK-e4-B6c" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="000-nd-Xdt">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="XJn-vt-g4E" kind="relationship" relationship="rootViewController" id="5An-YS-Mmo"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mh4-Oj-9E0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-689" y="-456"/>
         </scene>
     </scenes>
     <resources>
